--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "author": "",
   "license": "ISC",
-  "scripts": {
+  "script": {
     "start": "node index.js"
   },
   "dependencies": {
